align log icon correctly

--- a/projects/OG-Web/web-engine/prototype/styles/common/classes/og.common.classes.OG-icon.og-icon-log.css
+++ b/projects/OG-Web/web-engine/prototype/styles/common/classes/og.common.classes.OG-icon.og-icon-log.css
@@ -4,7 +4,7 @@
  */
 .OG-icon.og-icon-Log:after {
   display: inline-block;
-  background-position: -69px -77px;
+  background-position: -96px -77px;
   background-color: transparent;
   height: 14px;
   width: 15px;
